added enable/disable buttons

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <label for="newKeywordInput" class="form-label">Enter Keyword:</label>
                         <input id="newKeywordInput" type="text" class="form-control">
                     </div>
-                    <button id="addKeywordButton" type="submit" class="btn btn-primary">Add Keyword</button>
-                    <button id="resetKeywordButton" type="button" class="btn btn-danger">Reset Keywords</button> 
+                    <button id="addKeywordButton" type="submit" class="btn btn-primary" disabled>Add Keyword</button>
+                    <button id="resetKeywordButton" type="button" class="btn btn-danger" disabled>Reset Keywords</button> 
                 </form> 
             </div>
             
