started implementing tester

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             </div>
             
             <div class="h-75">
+                <!-- <ul id="keywordList">
+                    <li>No keywords yet</li>
+                </ul> -->
                 <div class="container">
                     <label for="currentKeywordsArea" class="form-label">Current Keywords:</label>
                     <textarea id="currentKeywordsArea" rows="6" class="form-control" readonly></textarea>
